rsvgdec: isn't able to negotiate caps when size is forced downstream
This works:
gst-launch-1.0 curlhttpsrc location='https://upload.wikimedia.org/wikipedia/commons/3/30/Vector-based_example.svg' ! \
rsvgdec ! \
videoconvert ! \
imagefreeze ! \
autovideosink
This doesn't:
gst-launch-1.0 curlhttpsrc location='https://upload.wikimedia.org/wikipedia/commons/3/30/Vector-based_example.svg' ! \
rsvgdec ! \
video/x-raw,width=1000,height=1000 ! videoconvert ! \
imagefreeze ! \
autovideosink
Setting pipeline to PAUSED ...
Pipeline is PREROLLING ...
ERROR: from element /GstPipeline:pipeline0/GstCurlHttpSrc:curlhttpsrc0: Internal data stream error.
Additional debug info:
../libs/gst/base/gstbasesrc.c(3127): gst_base_src_loop (): /GstPipeline:pipeline0/GstCurlHttpSrc:curlhttpsrc0:
streaming stopped, reason not-negotiated (-4)
ERROR: pipeline doesn't want to preroll.
Setting pipeline to NULL ...
Freeing pipeline ...
Happens both with 1.18.0 stable and 1.19.0 from master.